fix contrast

--- a/styles.css
+++ b/styles.css
@@ -61,6 +61,9 @@ nav img{
     margin-bottom: 10px;
 }
 
+.form-group label{
+    color: #ffffff;
+}
 
 
 
